--- a/site/index.html
+++ b/site/index.html
@@ -15,12 +15,7 @@
     </aside>
 
     <main class="main glass">
-      <div class="toolbar">
-        <button id="btn-theme" class="toggle">🌗 主题</button>
-        <button id="btn-colors" class="toggle">🎨 颜色</button>
-        <span class="muted">可自定义频谱</span>
-      </div>
-
+      <div class="toolbar"><button id="btn-theme" class="toggle">🌗 主题</button><button id="btn-colors" class="toggle">🎨 颜色</button><span class="muted">可自定义频谱</span></div>
       <div class="now-playing">
         <div class="meta">
           <div id="np-title" class="title">—</div>
@@ -43,6 +38,9 @@
     </main>
   </div>
 
+  <audio id="audio" crossorigin="anonymous" preload="none"></audio>
+  <script src="./app.js"></script>
+
   <div id="modal" class="modal">
     <div class="panel">
       <div style="font-weight:700;margin-bottom:4px">可视化颜色</div>
@@ -55,8 +53,7 @@
       </div>
     </div>
   </div>
-
-  <audio id="audio" crossorigin="anonymous" preload="none"></audio>
-  <script src="./app.js"></script>
 </body>
+</html>
+
 </html>
